feat: add reload browsers-sync on css ready

--- a/server/index.html
+++ b/server/index.html
@@ -3,8 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Server</title>
+
+	<link rel="stylesheet" type="text/css" href="css/app.min.css">
 </head>
 <body>
-	
+	da-da i
 </body>
 </html>
