--- a/server/index.html
+++ b/server/index.html
@@ -3,10 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Server</title>
-
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    
 	<link rel="stylesheet" type="text/css" href="css/app.min.css">
 </head>
 <body>
-	da-da i
+	
+
+	<script type="text/javascript" src="js/app.min.js"></script>
 </body>
 </html>
